# estrender-rs

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT-0.md  README.md
examples/: clear_color.rs  dear_imgui.rs  drawing.rs  font.rs  gpu_adapter.rs  input.rs  msaa.rs  pipeline.rs  software.rs  test.rs  texture_atlas.rs  triangle_and_compute.rs
src/: input.rs  lib.rs  main.rs  prelude.rs  runner.rs  software.rs  window.rs
src/font/: gpu.rs  mod.rs  system.rs
src/gpu/: buffer.rs  buffer_manager.rs  gpu_enums.rs  gpu_impls.rs  gpu_inner.rs  inner.rs  mod.rs  pipeline_manager.rs
src/gpu/backed_command/: compute.rs  graphics.rs  mod.rs
src/gpu/buffer/: mod.rs  staging_buffer.rs
src/gpu/command/: compute.rs  computepass.rs  drawing.rs  graphics.rs  mod.rs  pipeline.rs  renderpass.rs  utils.rs
src/gpu/command/computepass/: compute_enums.rs  compute_impls.rs  compute_inner.rs  mod.rs
src/gpu/command/renderpass/: mod.rs  renderpass_builder.rs  renderpass_enums.rs  renderpass_impls.rs  renderpass_inner.rs
src/gpu/command/resources/: drawing_shader.wgsl
src/gpu/pipeline/: compute.rs  computepipeline.rs  manager.rs  mod.rs  pipeline_manager.rs  render.rs  renderpipeline.rs
src/gpu/shader/: bind_group_manager.rs  compute.rs  graphics.rs  mod.rs  reflection.rs  types.rs
src/gpu/texture/: atlas.rs  mod.rs  sprite.rs  texture_atlas.rs  types.rs
src/graphics/: bind_group_manager.rs  buffer.rs  buffer_manager.rs  inner.rs  mod.rs  pipeline_manager.rs  sampler.rs
src/graphics/command/: compute.rs  graphics.rs  mod.rs
src/graphics/shader/: compute.rs  graphics.rs  mod.rs  reflection.rs  types.rs
src/graphics/texture/: mod.rs
src/math/: color.rs  matrix.rs  mod.rs  mvp.rs  point.rs  position.rs  rect.rs  size.rs  timing.rs  utils.rs  vector.rs  vertex.rs
src/runner/: mod.rs  runner_enums.rs  runner_impls.rs  runner_inner.rs
src/software/: mod.rs  software_enums.rs  software_impls.rs  software_inner.rs
src/utils/: arcmut.rs  arcref.rs  arcrw.rs  logger.rs  mod.rs
src/window/: inner.rs  input.rs  mod.rs  pixel_buffer.rs  runner.rs  window_enums.rs  window_impls.rs  window_inner.rs
