[package]
name = "est-render"
version = "0.2.1"
edition = "2024"
authors = ["Estrol Mendex <estrol@estrol.dev>"]
description = "Easy to use winit, softbuffer & wgpu abstractions"
documentation = "https://docs.rs/est-render"
repository = "https://github.com/estrol/estrender-rs"
license = "MIT-0 OR Apache-2.0"

[features]
x11 = []
software = ["softbuffer"]
enable-release-validation = []

[dependencies]
bitflags = "2.9.0"
bytemuck = "1.22.0"
byteorder-lite = "0.1.0"
flate2 = "1.1.1"
futures = "0.3.31"
fxhash = "0.2.1"
half = "2.6.0"
image = "0.25.5"
lazy_static = "1.5.0"
num-traits = "0.2.19"
rand = "0.9.0"
scopeguard = "1.2.0"
smol_str = "0.2.2"
softbuffer = { version = "0.4.6", optional = true }
ttf-parser = "0.25.1"
fontdue = "0.9.3"
wgpu = { version = "25.0.2", features = ["spirv"] }
winit = "0.30.9"
rect_packer = "0.2.1"

[package.metadata.docs.rs]
all-features = true
